16-0 setup label tweak

--- a/app/views/16-0/setup.html
+++ b/app/views/16-0/setup.html
@@ -88,7 +88,7 @@
             <!-- Existing providers -->
             <div class="govuk-form-group" id="existingproviders">
                 <label class="govuk-label" for="setupExistingProviders">
-                    Known/linked providers
+                    Existing/connected providers
                 </label>
                 <select class="govuk-select" id="setupExistingProviders" name="setupExistingProviders" data-option="setupExistingProviders">
                     {% for i in range(0, _empAccount.providers.length + 1) -%}
