--- a/app/views/16-0/reserve-check-answers.html
+++ b/app/views/16-0/reserve-check-answers.html
@@ -67,23 +67,6 @@
             {% endif %}
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Apprenticeship training start date
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    {% for _startDate in myData.startDates %}
-                        {% if myData.whichStartDateAnswer == _startDate.id %}
-                            {{_startDate.range}}
-                        {% endif %}
-                    {% endfor %}
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="reserve-choose-start-date">
-                        Change
-                    </a>
-                </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
                     Apprenticeship training course
                 </dt>
                 <dd class="govuk-summary-list__value">
@@ -94,7 +77,24 @@
                     {% endfor %}
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="reserve-choose-course">
+                    <a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-course">
+                        Change
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Apprenticeship training start date
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    {% for _startDate in myData.startDates %}
+                        {% if myData.whichStartDateAnswer == _startDate.id %}
+                            {{_startDate.range}}
+                        {% endif %}
+                    {% endfor %}
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-start-date">
                         Change
                     </a>
                 </dd>
@@ -113,9 +113,9 @@
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     {% if myData.existingproviders == 0 %}
-                    <a class="govuk-link" href="reserve-choose-provider-2">
+                    <a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-provider-2">
                     {% else %}
-                    <a class="govuk-link" href="reserve-choose-provider">
+                    <a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-provider">
                     {% endif %}
                         Change
                     </a>
