--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,6 +22,8 @@ Reserve funding prototype
           <li style="margin-bottom: 0px">Assign provider to reservation <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a></li>
           <li style="margin-bottom: 0px">Hiding org rows if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
           <li style="margin-bottom: 0px">Employer non EOI page <a href="https://trello.com/c/sJdu2BOE" target="_blank" class="govuk-link govuk-link--no-visited-state">card #153</a> </li>
+          <li style="margin-bottom: 0px">Reorder rows to match order of questions <a href="https://trello.com/c/QayiY8Kz" target="_blank" class="govuk-link govuk-link--no-visited-state">card #155</a> </li>
+          
         </ul>
       </li>
       <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a> (tested: XXX 2019)
