16-0 Apprenticeship training course

--- a/app/views/16-0/reserve-confirmation.html
+++ b/app/views/16-0/reserve-confirmation.html
@@ -58,7 +58,7 @@
             {% endif %}
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Apprenticeship training
+                        Apprenticeship training course
                 </dt>
                 <dd class="govuk-summary-list__value">
                     {% for _course in myData.courses.list %}
