--- a/app/views/16-0/reserve-check-answers-pro.html
+++ b/app/views/16-0/reserve-check-answers-pro.html
@@ -43,7 +43,7 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Apprenticeship training
+                    Apprenticeship training course
                 </dt>
                 <dd class="govuk-summary-list__value">
                     {% for _course in myData.courses.list %}
