16-0 type put onto query strings

--- a/app/views/16-0/employer-home.html
+++ b/app/views/16-0/employer-home.html
@@ -63,7 +63,7 @@ Home - Manage apprentices
 
             <div class="das-cards">
                 <div class="das-card">
-                    <h3 class="das-card__heading govuk-heading-m"><a href="reserve-reservations" class="govuk-link govuk-link--no-visited-state">Your funding reservations</a></h3>
+                    <h3 class="das-card__heading govuk-heading-m"><a href="reserve-reservations?type=emp" class="govuk-link govuk-link--no-visited-state">Your funding reservations</a></h3>
                     <p class="govuk-body">Reserve and manage funding.</p>
                 </div>
             </div>
