--- a/app/views/16-0/provider-home.html
+++ b/app/views/16-0/provider-home.html
@@ -38,7 +38,7 @@
 
                     <div class="das-card das-card__pro">
                         <h2 class="govuk-heading-m">
-                            <a class="govuk-link govuk-link--no-visited-state" href="{{_reserveStartURL}}">Get funding for non-levy employers</a>
+                            <a class="govuk-link govuk-link--no-visited-state" href="{{_reserveStartURL}}?type=pro">Get funding for non-levy employers</a>
                         </h2>
                         <p class="govuk-body">Secure funding for a non-levy employer to train an apprentice.</p>
                     </div>
