--- a/app/views/16-0/reserve-confirm-org.html
+++ b/app/views/16-0/reserve-confirm-org.html
@@ -54,7 +54,7 @@
 
         <h2 class="govuk-heading-l" >
             {{_selectedEmployer.name|upper}}
-            <span class="govuk-caption-l">Account name: {{_selectedEmployer.name|upper}}<br>Agreement ID: {{_selectedEmployer.id|upper}}</span>
+            <span class="govuk-caption-l">Account name: {{_selectedEmployer.aname}}<br>Agreement ID: {{_selectedEmployer.id|upper}}</span>
         </h1>
 
         <form method="POST">
