--- a/app/views/16-0/reserve-reservations.html
+++ b/app/views/16-0/reserve-reservations.html
@@ -55,7 +55,7 @@
         </h1>
 
         {% if _reservationstotal > 0 %}
-          <p class="govuk-heading-m"><a class="govuk-link govuk-link--no-visited-state" href="{{_reserveStartURL}}">Reserve more funding</a></p>
+          <p class="govuk-heading-m"><a class="govuk-link govuk-link--no-visited-state" href="{{_reserveStartURL}}?type=emp">Reserve more funding</a></p>
           <p class="govuk-body">{{_reservationstotal}} {% if _reservationstotal == 1 %}reservation{% else %}reservations{% endif %}</p>
           <table class="govuk-table">
               <!-- <caption class="govuk-table__caption">Dates and amounts</caption> -->
@@ -110,7 +110,7 @@
                     </td>
                     <td class="govuk-table__cell" >
                       {% if _reservation.status == "available" %}
-                      <a href="reserve-manage-reservation?reservation={{_reservation.id}}" class="govuk-link govuk-link--no-visited-state">Manage</a>
+                      <a href="reserve-manage-reservation?reservation={{_reservation.id}}&type=emp" class="govuk-link govuk-link--no-visited-state">Manage</a>
                       {% else %}
                       &nbsp;
                       {% endif %}
@@ -122,7 +122,7 @@
         {% else %}
           <h2 class="govuk-heading-m ">There are no funding reservations to use</h2>
           <p class="govuk-body ">You need to reserve funding in order to add a new apprentice.</p>
-          <a role="button" tabindex="1" draggable="false" class="govuk-button" href="{{_reserveStartURL}}">Reserve funding</a>
+          <a role="button" tabindex="1" draggable="false" class="govuk-button" href="{{_reserveStartURL}}?type=emp">Reserve funding</a>
         {% endif %}
 
     </div>
