--- a/app/views/16-0/reserve-choose-org-pro.html
+++ b/app/views/16-0/reserve-choose-org-pro.html
@@ -83,7 +83,7 @@
                   <td class="govuk-table__cell">{{_employer.aname}}</td>
                   <td class="govuk-table__cell">{{_employer.id}}</td>
                   <td class="govuk-table__cell govuk-table__cell--numeric" >
-                    <a href="reserve-confirm-org?employer={{_employer.id}}" class="govuk-link">Select</a>
+                    <a href="reserve-confirm-org?employer={{_employer.id}}" class="govuk-link govuk-link--no-visited-state">Select</a>
                   </td>
                 </tr>
               {% endfor %}
