16-0 non eoi content updated

--- a/app/views/16-0/reserve-non-eoi.html
+++ b/app/views/16-0/reserve-non-eoi.html
@@ -29,7 +29,7 @@
         <a href="{{_homepageURL}}" role="button" tabindex="1" draggable="false" class="govuk-button">Return to homepage</a>
       {% else %}
         <h1 class="govuk-heading-xl">Funding reservations coming soon</h1>
-        <p class="govuk-body">You will be able to reserve funding at a later date.</p>
+        <p class="govuk-body">You will be able to reserve funding to pay for apprenticeship training and assessment at a later date.</p>
         <a href="{{_homepageURL}}" role="button" tabindex="1" draggable="false" class="govuk-button">Return to homepage</a>
       {% endif %}
 
