16-0 improvements to expired tag code

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,7 @@ Reserve funding prototype
     </h1>
 
     <ul class="govuk-list govuk-list--bullet govuk-body-l">
-      <li style="margin-bottom:20px"><a href="/16-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 16</a> (in progress)
+      <li style="margin-bottom:20px"><a href="/16-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 16</a> (tested: XXX 2019)
         <ul class="govuk-list govuk-list--bullet">
           <li style="margin-bottom: 0px">Upcoming date always 2 months away <a href="https://trello.com/c/5bLqz2ut" target="_blank" class="govuk-link govuk-link--no-visited-state">card #13</a> </li>
           <li style="margin-bottom: 0px">Search for employer <a href="https://trello.com/c/KKKH7aNg" target="_blank" class="govuk-link govuk-link--no-visited-state">card #71</a></li>
@@ -22,8 +22,8 @@ Reserve funding prototype
           <li style="margin-bottom: 0px">Assign provider to reservation <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a></li>
           <li style="margin-bottom: 0px">Hiding org rows if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
           <li style="margin-bottom: 0px">Employer non EOI page <a href="https://trello.com/c/sJdu2BOE" target="_blank" class="govuk-link govuk-link--no-visited-state">card #153</a> </li>
+          <li style="margin-bottom: 0px">Only dates in the past show the 'expired' tag <a href="https://trello.com/c/ox2P3xcY" target="_blank" class="govuk-link govuk-link--no-visited-state">card #154</a> </li>
           <li style="margin-bottom: 0px">Reorder rows to match order of questions <a href="https://trello.com/c/QayiY8Kz" target="_blank" class="govuk-link govuk-link--no-visited-state">card #155</a> </li>
-          
         </ul>
       </li>
       <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a> (tested: XXX 2019)
