--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,10 @@ Reserve funding prototype
     </h1>
 
     <ul class="govuk-list govuk-list--bullet govuk-body-l">
+      <li style="margin-bottom:20px"><a href="/17-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 17</a> <span style="color:red">(in progress)</span> 
+        <ul class="govuk-list govuk-list--bullet">
+        </ul>
+      </li>
       <li style="margin-bottom:20px"><a href="/16-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 16</a> (tested: XXX 2019)
         <ul class="govuk-list govuk-list--bullet">
           <li style="margin-bottom: 0px">Upcoming date always 2 months away <a href="https://trello.com/c/5bLqz2ut" target="_blank" class="govuk-link govuk-link--no-visited-state">card #13</a> </li>
@@ -29,11 +33,11 @@ Reserve funding prototype
       <li style="margin-bottom:20px"><a href="/15-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 15</a> (tested: XXX 2019)
         <ul class="govuk-list govuk-list--bullet">
           <li style="margin-bottom: 0px">Manage page (provider): search, pagination and filters <a href="https://trello.com/c/9dnOLy9f" target="_blank" class="govuk-link govuk-link--no-visited-state">card #148</a></li> 
+          <li style="margin-bottom: 0px">Hiding org column if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
           <li style="margin-bottom: 0px">Manage page (provider): table layout, ordering, misc content changes (incl. 0 reservations view)</li>
           <li style="margin-bottom: 0px">Choose course page: yes/no choice</li>
           <li style="margin-bottom: 0px">Choose org page: skip page if 1</li>
           <li style="margin-bottom: 0px">Dropout - dont know course page: new page</li>
-          <li style="margin-bottom: 0px">Hiding org column if 1 org  <a href="https://trello.com/c/l2losURX" target="_blank" class="govuk-link govuk-link--no-visited-state">card #152</a></li>
           <li style="margin-bottom: 0px">Manage page (employer): table layout, ordering</li>
         </ul>
       </li>
