--- a/app/views/17-0/reserve-reservations-pro.html
+++ b/app/views/17-0/reserve-reservations-pro.html
@@ -62,7 +62,7 @@
     <form method="GET" >
       <div class="search-wrapper govuk-form-group" >
         <label for="search-reservations" class="govuk-label" >
-            Search employer name or course
+            Search employer or apprenticeship training course
         </label>
         <div class="search-input-wrapper">
           <input type="search" value="{% if myData.searchapplied == true %}{{myData.searchTerm}}{% endif %}" id="search-reservations" name="q" title="Search" class="govuk-input">
@@ -98,7 +98,7 @@
         <!-- Course filter -->
         <div class="govuk-form-group" style="margin-bottom: 20px" >
           <label class="govuk-label" for="course-filter" >
-            Course
+              Apprenticeship training course
           </label>
           <select class="govuk-select" id="course-filter" name="course-filter" style="min-width: 100%">
             <option value="all">All</option>
@@ -125,7 +125,7 @@
   </div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-third" >
-      <a class="govuk-button" href="#" style="margin-bottom: 20px">Filter</a>
+      <a class="govuk-button" href="#" style="margin-bottom: 20px">Apply filters</a>
     </div>
   </div>
 </div>
@@ -142,7 +142,7 @@
         {% if myData.filters == "false" %}
         Clear search
         {% else %}
-        Clear filter
+        Clear search and filters
         {% endif %}
       </a></p>
     {% endif %}
@@ -158,7 +158,7 @@
         <thead class="govuk-table__head" >
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Employer</th>
-            <th scope="col" class="govuk-table__header">Course</th>
+            <th scope="col" class="govuk-table__header">Apprenticeship training course</th>
             <th scope="col" class="govuk-table__header">Start date</th>
             <th scope="col" class="govuk-table__header"></th>
             <th scope="col" class="govuk-table__header"></th>
