17-0 emails deleted and reserved

--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -455,6 +455,19 @@
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-meltdown"  >/reserve-meltdown</a></td>
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-meltdown"  >/reserve-meltdown</a></td>
                 </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell" colspan="3"><h2 class="govuk-heading-m" style="margin-top:20px">Emails</h2></th>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Provider deleted reservation</th>
+                    <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="reserve-email-deleted-res-emp" >/reserve-email-deleted-res-emp</a></td>
+                    <td class="govuk-table__cell" style="color:grey">n/a</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Provider created reservation</th>
+                    <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="reserve-email-created-res-emp" >/reserve-email-created-res-emp</a></td>
+                    <td class="govuk-table__cell" style="color:grey">n/a</td>
+                </tr>
             </tbody>
         </table>
     </div>
