--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,6 +17,7 @@ Reserve funding prototype
         <ul class="govuk-list govuk-list--bullet">
           <li style="margin-bottom: 0px">Manage filters mobile layout (provider) <a href="https://trello.com/c/9dnOLy9f" target="_blank" class="govuk-link govuk-link--no-visited-state">card #148</a> </li>
           <li style="margin-bottom: 0px">Manage table headers (provider) <a href="https://trello.com/c/Vck042Jr" target="_blank" class="govuk-link govuk-link--no-visited-state">card #157</a></li>
+          <li style="margin-bottom: 0px">Emails: deleted and created (employer) <a href="https://trello.com/c/mCCd8nbd" target="_blank" class="govuk-link govuk-link--no-visited-state">card #158</a></li>
         </ul>
       </li>
       <li style="margin-bottom:20px"><a href="/16-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 16</a> (tested: XXX 2019)
