17-0 provider added to deleted from res emails

--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -468,6 +468,16 @@
                     <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="reserve-email-created-res-emp" >/reserve-email-created-res-emp</a></td>
                     <td class="govuk-table__cell" style="color:grey">n/a</td>
                 </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Provider added to a reservation</th>
+                    <td class="govuk-table__cell" style="color:grey">n/a</td>
+                    <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="reserve-email-added-to-res-pro" >/reserve-email-added-to-res-pro</a></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Provider deleted from a reservation</th>
+                    <td class="govuk-table__cell" style="color:grey">n/a</td>
+                    <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="reserve-email-deleted-from-res-pro" >/reserve-email-deleted-from-res-pro</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
