17-0 emails content update

--- a/app/views/17-0/reserve-email-added-to-res-pro.html
+++ b/app/views/17-0/reserve-email-added-to-res-pro.html
@@ -83,11 +83,11 @@
                 <p class="govuk-body">KENDLE LTD assigned a funding reservation to you:</p>
 
                 <ul class="govuk-list govuk-list--bullet">
-                    <li>apprenticeship training course: Business Administrator - Level 3</li>
                     <li>apprenticeship training start date: Nov 2019 to Jan 2020</li>
+                    <li>apprenticeship training course: Business Administrator - Level 3</li>
                 </ul>
 
-                <p class="govuk-body">Sign into your apprenticeship service account to view this reservation - <a href="#" class="govuk-link govuk-link--no-visited-state">XXX</a></p>
+                <p class="govuk-body">Sign into your apprenticeship service account to view this reservation - <a href="reserve-reservations-pro" class="govuk-link govuk-link--no-visited-state">https://securefunding.apprenticeships.education.gov.uk/reservations/manage</a></p>
 
                 
                 <p class="govuk-body">This is an automated message. Do not reply to this email.</p>
