17-0 email content updates

--- a/app/views/17-0/reserve-email-deleted-from-res-pro.html
+++ b/app/views/17-0/reserve-email-deleted-from-res-pro.html
@@ -80,7 +80,7 @@
                 <td width="10" valign="middle"><br></td>
                 <td style="font-family:Helvetica,Arial,sans-serif;font-size:19px;line-height:1.315789474;max-width:560px">
 
-                <p class="govuk-body">KENDLE LTD has removed you from a funding reservation:</p>
+                <p class="govuk-body">KENDLE LTD has removed you from a funding reservation made for the following:</p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>apprenticeship training start date: Dec 2019 to Feb 2020</li>
