17-0 addded break word to long urls in emails

--- a/app/views/17-0/reserve-email-added-to-res-pro.html
+++ b/app/views/17-0/reserve-email-added-to-res-pro.html
@@ -87,7 +87,7 @@
                     <li>apprenticeship training course: Business Administrator - Level 3</li>
                 </ul>
 
-                <p class="govuk-body">Sign into your apprenticeship service account to view this reservation - <a href="reserve-reservations-pro" class="govuk-link govuk-link--no-visited-state">https://securefunding.apprenticeships.education.gov.uk/reservations/manage</a></p>
+                <p class="govuk-body">Sign into your apprenticeship service account to view this reservation - <a href="reserve-reservations-pro" class="govuk-link govuk-link--no-visited-state" style="word-break: break-all">https://securefunding.apprenticeships.education.gov.uk/reservations/manage</a></p>
 
                 
                 <p class="govuk-body">This is an automated message. Do not reply to this email.</p>
