--- a/app/views/17-0/reserve-email-created-res-emp.html
+++ b/app/views/17-0/reserve-email-created-res-emp.html
@@ -81,7 +81,7 @@
                     <li>apprenticeship training course: Business Administrator - Level 3</li>
                 </ul>
 
-                <p class="govuk-body">Sign in to your apprenticeship service account to view - <a href="reserve-reservations?t=emp" class="govuk-link govuk-link--no-visited-state">https://securefunding.apprenticeships.education.gov.uk/accounts/reservations/manage</a></p>
+                <p class="govuk-body">Sign in to your apprenticeship service account to view - <a href="reserve-reservations?t=emp" class="govuk-link govuk-link--no-visited-state" style="word-break: break-all">https://securefunding.apprenticeships.education.gov.uk/accounts/reservations/manage</a></p>
 
                 
                 <p class="govuk-body">This is an automated message. Do not reply to this email.</p>
